crates/language-v2/tests/src/fail/p0_parsing/empty_string/test.stderr
error: Expected a non-empty string.
  --> src/fail/p0_parsing/empty_string/test.rs:15:59
   |
15 |                 items = [Token(name = Bar, scanner = Atom(""))]
   |                                                           ^^
